// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JoinPage extractQueryParams merges data from query params onto stored cookie data 1`] = `
Object {
  "attributionData": Object {
    "utm_medium": "script",
    "utm_source": "script",
  },
  "creationParams": Object {
    "foo": "bar",
  },
  "sfdcid": "123",
}
`;

exports[`JoinPage extractQueryParams returns correct data when cookie is absent 1`] = `
Object {
  "attributionData": Object {},
  "creationParams": Object {},
  "sfdcid": undefined,
}
`;

exports[`JoinPage extractQueryParams returns correct data when value exists in cookie only 1`] = `
Object {
  "attributionData": Object {
    "utm_source": "script",
  },
  "creationParams": Object {},
  "sfdcid": "123",
}
`;

exports[`JoinPage registerSubmit calls register with correct data 1`] = `
Array [
  Array [
    Object {
      "creation_params": Object {
        "extra1": "bar1",
        "extra2": "bar2",
      },
      "email": "foo@bar.com",
      "first_name": "foo",
      "last_name": "bar",
      "password": "foobar",
      "salesforce_data": Object {
        "email_opt_out": true,
        "src": "Test Source",
        "utm_source": "test file",
      },
      "sfdcid": "abcd",
      "tou_accepted": true,
    },
  ],
]
`;

exports[`JoinPage render renders aws logo when signup from aws 1`] = `
<div>
  <Script
    attributes={Object {}}
    onCreate={[Function]}
    onError={[Function]}
    onLoad={[Function]}
    url="https://www.google.com/recaptcha/api.js"
  />
  <CenteredLogo
    showAwsLogo={true}
  />
  <Panel
    accent={true}
    title="Sign Up"
  >
    <Panel.Section>
      <Connect(ReduxForm)
        onSubmit={[Function]}
      />
    </Panel.Section>
  </Panel>
  <Panel.Footer
    left={
      <small>
        Already have an account? 
        <PageLink
          to="/auth"
        >
          Log In
        </PageLink>
        .
      </small>
    }
    right={
      <JoinLink
        location={
          Object {
            "pathname": "/join",
          }
        }
      />
    }
  />
</div>
`;

exports[`JoinPage render renders correctly 1`] = `
<div>
  <Script
    attributes={Object {}}
    onCreate={[Function]}
    onError={[Function]}
    onLoad={[Function]}
    url="https://www.google.com/recaptcha/api.js"
  />
  <CenteredLogo
    showAwsLogo={false}
  />
  <Panel
    accent={true}
    title="Sign Up"
  >
    <Panel.Section>
      <Connect(ReduxForm)
        onSubmit={[Function]}
      />
    </Panel.Section>
  </Panel>
  <Panel.Footer
    left={
      <small>
        Already have an account? 
        <PageLink
          to="/auth"
        >
          Log In
        </PageLink>
        .
      </small>
    }
    right={
      <JoinLink
        location={
          Object {
            "pathname": "/join",
          }
        }
      />
    }
  />
</div>
`;

exports[`JoinPage render renders errors 1`] = `
<div>
  <Script
    attributes={Object {}}
    onCreate={[Function]}
    onError={[Function]}
    onLoad={[Function]}
    url="https://www.google.com/recaptcha/api.js"
  />
  <CenteredLogo
    showAwsLogo={false}
  />
  <Panel
    accent={true}
    title="Sign Up"
  >
    <Panel.Section>
      <Error
        error={
          <JoinError
            data={Object {}}
            errors={Object {}}
          />
        }
      />
    </Panel.Section>
    <Panel.Section>
      <Connect(ReduxForm)
        onSubmit={[Function]}
      />
    </Panel.Section>
  </Panel>
  <Panel.Footer
    left={
      <small>
        Already have an account? 
        <PageLink
          to="/auth"
        >
          Log In
        </PageLink>
        .
      </small>
    }
    right={
      <JoinLink
        location={
          Object {
            "pathname": "/join",
          }
        }
      />
    }
  />
</div>
`;
